src/styles/globals.scss
@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@300;400;500;600&family=Nunito:ital,wght@0,300;0,400;0,500;0,600;1,400;1,500&display=swap');
@import 'node_modules/modern-normalize/modern-normalize.css';

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
    .gradient-text {
        @apply text-transparent bg-clip-text  bg-gradient-to-r from-cyan-400 to-sky-600;
    }
    .absolute-center {
        @apply flex items-center justify-center;
    }
    .relative-center {
        @apply absolute left-1/2 -translate-x-1/2 -translate-y-1/2;
    }
}

:root {
    --gradient: conic-gradient(
        from 90deg at 50% 50%,
        rgb(251, 55, 60),
        rgba(252, 114, 28, 1),
        rgba(255, 220, 0, 1),
        rgba(27, 206, 255, 1),
        rgba(42, 107, 255, 1),
        rgba(217, 41, 255, 1),
        rgba(255, 10, 92, 1)
    );
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html {
    font-size: 62.5%;
    -webkit-tap-highlight-color: transparent;
    scroll-behavior: smooth;
    scroll-snap-type: y mandatory;
}

body {
    font-size: 1.6rem;
    text-rendering: optimizeSpeed;
    height: fit-content;
    overflow-x: hidden;
}

html,
body {
    overscroll-behavior: none;
}

*:focus {
    outline: none;
}

::-webkit-scrollbar {
    width: 5px;
}

::-webkit-scrollbar-thumb {
    @apply rounded-2xl bg-gray-400;
}

summary::-webkit-details-marker {
    display: none;
}
summary {
    list-style: none;
}

/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

/* Firefox */
input[type='number'] {
    -moz-appearance: textfield;
}

.fancy-fade-in {
    animation: fade-in-animation 1.3s ease-in-out;
}

@keyframes fade-in-animation {
    0% {
        opacity: 0;
        filter: brightness(1) blur(20px);
    }
    10% {
        opacity: 1;
        filter: brightness(2) blur(10px);
    }
    100% {
        opacity: 1;
        filter: brightness(1) blur(0);
    }
}

.vertical-timeline-element-content {
    background: none !important;
}

@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500;600&family=Poppins:wght@400;500&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
}

.card {
    --start: 0;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    // width: 280px;
    // height: 350px;
    margin: 10px;
    padding: 10px 40px;
    border-radius: 14px;
    transition: border-color 0.3s ease-in-out;
}

.card::before {
    position: absolute;
    content: '';
    width: 100%;
    height: 100%;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    border-radius: 14px;
    border: 2px solid transparent;
    background: var(--gradient);
    background-attachment: fixed;
    mask: linear-gradient(#0000, #0000),
        conic-gradient(
            from calc((var(--start) - (20 * 1.1)) * 1deg),
            #ffffff1f 0deg,
            white,
            #ffffff00 100deg
        );
    mask-composite: intersect;
    mask-clip: padding-box, border-box;
    opacity: 0;
    transition: 0.5s ease;
}

.glow {
    pointer-events: none;
    position: absolute;
    width: 100%;
    height: 100%;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    filter: blur(14px);
}

.glow::before {
    position: absolute;
    content: '';
    width: 98%;
    height: 98%;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    border-radius: 14px;
    border: 15px solid transparent;
    background: var(--gradient);
    background-attachment: fixed;
    mask: linear-gradient(#0000, #0000),
        conic-gradient(
            from calc((var(--start) - (20 * 1.1)) * 1deg),
            #ffffff1f 0deg,
            white,
            #ffffff00 100deg
        );
    mask-composite: intersect;
    mask-clip: padding-box, border-box;
    opacity: 0;
    transition: 1s ease;
}

.card:hover > .glow::before {
    opacity: 1;
}
.card:hover::before {
    opacity: 0.6;
}

.card {
    h2 {
        font-size: 32px;
        color: rgb(71, 71, 71);
        text-align: center;
        font-weight: 600;
    }

    p {
        font-size: inherit;
        color: rgb(174, 174, 174);
        font-weight: 600;
    }
}

